# quad-jam-2024

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GAMEPLAY.MD  LICENSE  README.MD  game.wasm  gamecfg.json  index.html  sapp_jsutils.js
.github/workflows/: ci.yml  deploy.yml  itch.yml
animations/: bnuuy.json  shooter.json  stabber.json
art-project/: base.aseprite  bnuuy-anims.json
assets/: bnuuy.json
assets/anim/: bnuuy.json  shooter.json  stabber.json
assets/levels/: level1.ron  level2.ron  level3.ron
assets/prefab/: player.json
docs/migrations/: README.MD  migrate_v2.py  migrate_v3.py  migrate_v4.py  migrate_v5.py  migrate_v6.py
jam-macro/: Cargo.toml
jam-macro/src/: lib.rs
lib-anim/: Cargo.toml
lib-anim/src/: animation.rs  binary_io.rs  lib.rs  main.rs
lib-anim/src/aseprite_load/: aseprite_decode.rs  mod.rs
lib-asset/: Cargo.toml
lib-asset/src/: asset_roots.rs  assets.rs  containers.rs  gamecfg.rs  lib.rs  main.rs  manager.rs  prefab.rs
lib-asset/src/animation/: aseprite_load.rs  mod.rs
lib-asset/src/animation_manifest/: aseprite_load.rs  mod.rs
lib-asset/src/level/: mod.rs  tiled_load.rs  tiled_props_des.rs
lib-asset/tests/: check_all_maps.rs  different_origin.rs
lib-asset/tool/: devenv.rs  main.rs
lib-col/: Cargo.toml
lib-col/src/: aabb.rs  group.rs  lib.rs  shape.rs
lib-col/tests/: aabb_casts.rs  aabb_overlaps.rs  aabb_raycasts.rs  collider_group.rs  shape_casts.rs  simple_intersections.rs  world.rs
lib-col/tests/common/: mod.rs
lib-dbg/: Cargo.toml
lib-dbg/src/: cmd.rs  cmd_storage.rs  lib.rs  screencon.rs  screendump.rs
lib-game/: Cargo.toml
lib-game/src/: animations.rs  attack.rs  character.rs  components.rs  dbg.rs  health.rs  input.rs  level_utils.rs  lib.rs  physics.rs  prefab.rs  prelude.rs  profiling.rs  projectile.rs  sound_director.rs  state.rs  sys.rs
lib-game/src/animation/: actions.rs  container.rs  mod.rs
lib-game/src/collisions/: components.rs  debug.rs  mod.rs
lib-game/src/dbg/: cmd.rs  console.rs  mod.rs  screendump.rs
lib-game/src/dbg/animation_edit/: clips.rs  mod.rs  save_ui.rs  sequencer.rs
lib-game/src/physics/: components.rs  debug.rs  mod.rs
lib-game/src/render/: components.rs  mod.rs
lib-level/: Cargo.toml
lib-level/src/: binary_io.rs  level.rs  lib.rs  main.rs  tiled.rs  tiled_decode.rs  tiled_props_des.rs
lib-level/src/tiled_load/: mod.rs  tiled_decode.rs
lib-level/tests/: check_all_maps.rs
project-animations/: bnuuy.json  shooter.json  stabber.json
project-aseprite/: base.aseprite  bnuuy-anims.json  bnuuy.json
project-tiled/: bnuuy.tiled-project  character.tx  test_bullet_room.tmx  test_room.tmx  test_shooter_room.tmx  world.tsx
quad-col/: Cargo.toml
quad-col/src/: conv.rs  group.rs  lib.rs  shape.rs  shape_collisions.rs  shape_util.rs
quad-col/tests/: collider_group.rs  collider_group_test.rs  shape_casts.rs  simple_intersections.rs  two_shape_tests.rs  world.rs  world_test.rs
quad-col/tests/common/: mod.rs
quad-dbg/: Cargo.toml
quad-dbg/src/: cmd.rs  cmd_storage.rs  debug.rs  lib.rs  screencon.rs  screendump.rs  screentext.rs
src/: cli.rs  components.rs  debug.rs  enemy.rs  game.rs  game_model.rs  goal.rs  level.rs  logic.rs  main.rs  main_game.rs  physics.rs  player.rs  prelude.rs  render.rs  sound_director.rs  sys.rs  tile.rs  ui.rs  util.rs
src/game/: basic_bullet.rs  components.rs  damager.rs  goal.rs  health.rs  level.rs  mod.rs  player.rs  prelude.rs  render.rs  shooter.rs  stabber.rs  tile.rs
static/: app_essentials.js  index.html  miniquad.js
tests/: test_char_movement.rs  test_shape_collisions.rs
tiled-project/: test_room.tmx  world.tsx
tiled_project/: bnuuy.tiled-project  world.tsx
