[package]
name = "quad-jam-2024"
version = "0.15.0"
edition = "2024"

[workspace]
members = [ "lib-anim", "lib-asset", "lib-col", "lib-dbg", "lib-game", "lib-level" ]

[dependencies]
# Workspace deps
anyhow = { workspace = true }
hecs = { workspace = true }
log = { workspace = true }
macroquad = { workspace = true }
hashbrown = { workspace = true }
glam = { workspace = true }
# Internal deps
lib-col = { path = "./lib-col"}
lib-dbg = { path = "./lib-dbg" }
lib-game = { path = "./lib-game" }
lib-level = { path = "./lib-level" }
lib-anim = { path = "./lib-anim" }
lib-asset = { path = "./lib-asset" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
hecs = "0.10.5"
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
macroquad = { version = "0.4.14", features = ["audio", "log-rs"] }
anyhow = "1"
# NOTE: keep the version matching the one macroquad is using
hashbrown = "0.14.5"
glam = { version = "0.30", features = ["serde"] }
# FIXME: we do not want to pull dev-tools on WASM
# NOTE: Macroquad is patched, because some things may depend on it.
#       There are no dependencies on egui-macroquad.
#       Just pull it as git dep.
egui-macroquad = { git = "https://github.com/InnocentusLime/egui-macroquad.git", rev = "0061aee361e908d15e95e4c6bd02ec6beee3d7fd", features = ["audio", "logs-rs"] }
egui = "0.31.1"

[patch.crates-io]
macroquad = { git = "https://github.com/InnocentusLime/macroquad.git", rev = "d37736c42bc4328e2fd6f2ebcd3f19d88320732e" }

[profile.release]
opt-level = 3
codegen-units = 1 # Compile the entire crate as one unit. marginal improvements.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies. marginal improvements.

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release" # Use release profile as default values.
opt-level = "z"      # Optimize with size in mind (also try "s", sometimes it is better).
strip = true  # Strip all debugging information from the binary to reduce file size.
panic = "abort"
