[package]
name = "quad-jam-2024"
version = "0.23.0"
edition = "2024"

[workspace]
members = [ "lib-asset", "lib-col", "lib-game" ]

[dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
# Workspace deps
anyhow = { workspace = true }
hecs = { workspace = true }
log = { workspace = true }
macroquad = { workspace = true }
hashbrown = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }
# Internal deps
lib-col = { path = "./lib-col"}
lib-game = { path = "./lib-game" }
lib-asset = { path = "./lib-asset" }

[features]
dbg = ["lib-game/dbg"]
dev-env = ["lib-game/dev-env", "dep:clap"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
hecs = { version = "0.10.5", features = ["macros"] }
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
macroquad = { version = "0.4.14", features = ["audio", "log-rs"] }
anyhow = "1"
# NOTE: keep the version matching the one macroquad is using
hashbrown = "0.14.5"
glam = { version = "0.30", features = ["serde"] }

[patch.crates-io]
macroquad = { git = "https://github.com/InnocentusLime/macroquad.git", rev = "d37736c42bc4328e2fd6f2ebcd3f19d88320732e" }

[profile.release]
opt-level = 3
codegen-units = 1 # Compile the entire crate as one unit. marginal improvements.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies. marginal improvements.

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release" # Use release profile as default values.
opt-level = "z"      # Optimize with size in mind (also try "s", sometimes it is better).
strip = true  # Strip all debugging information from the binary to reduce file size.
panic = "abort"
