[package]
name = "lib-anim"
version = "0.3.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
lib-asset = { path = "../lib-asset" }

[target.'cfg(target_family = "wasm")'.dependencies]
postcard = "1"
macroquad = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"