[package]
name = "lib-asset"
version = "0.12.0"
edition = "2024"

[dependencies]
glam = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
mimiq = { workspace = true }
lib-col = { path = "../lib-col" }
serde_json = "1" 
slab = "0.4"

[features]
dbg = []
dev-env = ["dbg"]
