[package]
name = "lib-game"
version = "0.13.3"
edition = "2024"

[dependencies]
egui-macroquad = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
hecs = { workspace = true }
macroquad = { workspace = true }
hashbrown = { workspace = true }
lib-dbg = { path = "../lib-dbg" }
lib-col = { path = "../lib-col" }
lib-asset = { path = "../lib-asset" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = { version = "^0.1" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
egui = { workspace = true }
rfd = { version = "0.15.4" }
serde_json = "1"

[dev-dependencies]
rand = "0.9.1"