[package]
name = "lib-level"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
strum = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
postcard = "1"
macroquad = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
thiserror = "2"
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
tiled = { version = "0.14.0", default-features = false, features = [] }